--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -12,8 +12,8 @@
     width: 100%;
     padding: 150px 60px;
 
-    &--open {
-        overflow-y: hidden;
-        -webkit-overflow-y: hidden;
-    }
+    // &--open {
+    //     overflow-y: hidden;
+    //     -webkit-overflow-y: hidden;
+    // }
 }
