--- a/scss/_states.scss
+++ b/scss/_states.scss
@@ -36,14 +36,14 @@
 
 
 
-html.navigation-is-open {
-    overflow: hidden;
-    -webkit-overflow: hidden;
-}
+// html.navigation-is-open {
+//     overflow: hidden;
+//     -webkit-overflow: hidden;
+// }
 
-body.navigation-is-open {
-    overflow: hidden;
-    -webkit-overflow: hidden;
-    position: fixed;
-    width: 100%
-}
+// body.navigation-is-open {
+//     overflow: hidden;
+//     -webkit-overflow: hidden;
+//     position: fixed;
+//     width: 100%
+// }
